deploy/k8s/platform/grafana/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: shopping
  labels:
    app.kubernetes.io/name: grafana-ingress
    app.kubernetes.io/version: v1.0
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: grafana.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 80
  # tls:
  #   - hosts:
  #       - grafana.local
  #     secretName: grafanalocal-tls
